# lite6_moveit_resources

./: README.md
lite6_description/: CMakeLists.txt  lite6.urdf  newURDF.urdf  noncollision.urdf  package.xml
lite6_description/urdf/: lite6.urdf
lite6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lite6_moveit_config/config/: joint_limits.yaml  kinematics.yaml  lite6.srdf  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
lite6_moveit_resources/: CMakeLists.txt  package.xml
