<?xml version="1.0"?>
<package format="3">
  <name>moveit_resources_lite6_description</name>
  <description>lite6 Resources used for MoveIt</description>
  <author email="peterdavidfagan@gmail.com">Peter David Fagan</author>
  <version>0.0.0</version>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
