<?xml version="1.0"?>
<package format="3">
  <name>lite6_moveit_resources</name>
  <author email="peterdavidfagan@gmail.com">Peter David Fagan</author>

  <version>0.0.0</version>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_resources_lite6_description</exec_depend>
  <exec_depend>moveit_resources_lite6_moveit_config</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
